Minor code cleanup.